[FIX] fix render bugs

--- a/config/llm_settings.yaml
+++ b/config/llm_settings.yaml
@@ -1,14 +1,14 @@
 backend:
     ollama:
         base_url: http://10.147.17.209:11434
-        api_key: 
-        model: 
+        api_key: ""
+        model: ""
     qwen:
         base_url: https://dashscope.aliyuncs.com/compatible-mode/v1/chat/completions
-        api_key: 
-        model: qwen-plus
+        api_key: sk-8d7c3db530004c18bcde962e4a8d1b15
+        model: qwen-max
     volcengine:
         base_url: https://ark.cn-beijing.volces.com/api/v3/chat/completions
-        api_key: 
+        api_key: 84a8a618-cf6f-403b-9cc9-1e6e6681079b
         model: deepseek-r1-250120
-default_backend: volcengine
+default_backend: qwen
