--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
         go-version: '1.24.0'
 
     - name: Build
-      run: go build
+      run: GOOS=windows GOARCH=amd64 go build
 
     - name: Test
-      run: go test
+      run: GOOS=windows GOARCH=amd64 go test
