--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
         go-version: '1.24.0'
 
     - name: Build
-      run: GOOS=windows GOARCH=amd64 CGO_ENABLED=1 CC=x86_64-w64-mingw32-gcc go build
+      run: GOOS=windows GOARCH=amd64 CGO_ENABLED=1 go build
 
     - name: Test
-      run: GOOS=windows GOARCH=amd64 CGO_ENABLED=1 CC=x86_64-w64-mingw32-gcc go test
+      run: GOOS=windows GOARCH=amd64 CGO_ENABLED=1 go test
