--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,7 +12,7 @@ on:
 jobs:
 
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows
     steps:
     - uses: actions/checkout@v4
 
@@ -22,7 +22,7 @@ jobs:
         go-version: '1.24.0'
 
     - name: Build
-      run: GOOS=windows GOARCH=amd64 CGO_ENABLED=1 go build
+      run: go build
 
     - name: Test
-      run: GOOS=windows GOARCH=amd64 CGO_ENABLED=1 go test
+      run: go test
